Updated design doc

--- a/Design/EN.600.437.FP.FA14.DESIGN.tex
+++ b/Design/EN.600.437.FP.FA14.DESIGN.tex
@@ -170,7 +170,7 @@ The array of linked lists is also useful for achieving fault tolerence. A server
 \subsubsection{Linked List of Chat Rooms}
 A second data structure is used in order to keep track of messages (in order) in every chat room. At the highest level, this is a linked list of chat rooms in no particular order. These chat rooms each contain the name string of the chat room it represents and two linked.
 
-There are two linked lists which have different purposes. First, there is a linked list of names used to keep track of the clients (and their usernames) who are a part of that chat room. Each of these names has a name string, a pointer to the next name, and a pointer to a linked list of private names which are unique to each client process. This linked list of private names is used to keep track of the client processes that share the same username (this goes along with the assumption that usernames are unique). This way, when there are no private usernames left in the list, then it is definite that there are no users in that chat room with the associated username.
+There are two linked lists which have different purposes. First, there is a linked list of names used to keep track of the clients (and their usernames) who are a part of that chat room. Each of these names has a name string, a pointer to the next name, and a pointer to a linked list of private names which are unique to each client process. This linked list of private names is used to keep track of the client processes that share the same username (this goes along with the assumption that usernames are unique). This way, when there are no private usernames left in the list, then it is definite that there are no users in that chat room with the associated username.  When this occurrs, the username is removed from the chatroom, and a message is sent to the client with the new memberhsip list.  Also a removal message is sent to all other servers with that private name, so that each server can remove it from their attendee lists.
 
 The other linked list at the second level is the actual messages sent on that chat room. This linked list is sorted by increasing order based on lamport timestamp. These message nodes therefore have a chat\_packet, a pointer to the next message, and a pointer to a list of likes. The mentioned linked lists of likes from each message contain the name of a user who has liked (or then subsequently unliked) the message, a "like" field which determines whether or not that given user is still liking the message, and a field for the lamport timestamp of the highest like/unlike message from the given user.
 
@@ -179,38 +179,38 @@ The incentive behind having this data structure is that a client process will on
 %\subsection{Server Operations}
 %We plan to have each server save every message it receives from a client to disk.  We will also have a file that contains messages from all servers that will be written every time there is a membership change.  Sequence numbers will be assigned to each message when it is received from Spread, and a client will not see their message until the server that put it into spread received the message and has a sequence number assigned to it.  Servers will continue to run during a partition.  When a partition merges, the partition that contained the lowest numbered server will have priority to send.  Each server will send its vector containing the highest number sequence from each server.  Each server will resend the messages from the lowest heard sequence for their server. The ordering will be maintained by the sequence number, and further ordering will be by process id to make all servers consistent. When these messages are sent, the resend flag is set so that these message do not get re-ordered, and then they are just added to the linked list for each server.\\
 
-
 \subsection{Client Data Structures}
-The client only has one data structure. A linked list of the messages that have occured in the chat room to which a client is a member. These messages are sorted in lamport timestamp order. Each of the nodes has the number of likes associated with that message as a part of the message data. This makes it very easy for the client process to output the contents of its chat room. One simply iterates through the nodes and prints out the username of the message's author, the text, and the number of likes.  The link list is destroyed each time a user leaves the chatroom, and a new one is created when the user joins a new chatroom.
+The client only has one data structure. A double linked list of the messages that have occured in the chat room to which a client is a member. We utilize a double linked list in order to traverse back to the last 25 message for display purposes.  These messages are sorted in lamport timestamp order. Each of the nodes has the number of likes associated with that message as a part of the message data. This makes it very easy for the client process to output the contents of its chat room. One simply iterates through the nodes and prints out the username of the message's author, the text, and the number of likes.  The link list is destroyed each time a user leaves the chatroom, and a new one is created when the user joins a new chatroom. When new messages arrive from a server reconciliation, we may get messages that are not in order.  These messages are simply inserted into the list based on their lamport timestamp.  If they have the same LTS as a message in the linked list, it is simply ignored, however if it is in between two messages in the linked list, it is stitched into the list to maintain complete LTS order for the chatroom. 
+
+\subsection{Client Operations}
+The client begins with a menu screen allowing the user to connect to a server or change username.  Once the client connects, the menu gives the rest of the options to the user.  The user can then connect to a chatroom (if they have set their username), and begin adding messages, liking messages, removing likes, and print history.  The user may also view the chat servers available at any time while connected to the server.  Each operation sends a request to the server public group, and the response triggers the client screen update.  The screen is cleared when connected to the chat room, and it is re-drawn upon updates.  Line numbers are created for each message in a chat, which allows the user to specify messages to be liked or unliked.  The line numbers continue indefinitely, which allows the user to like a message back in history prior to the last 25 that are printed out.  We realize that this is not actually suitable for a system that will run over a long period of time, since the numbers will be too long for users to type in, however we wanted to have the functionality to like all messages in the chat history.  If we were to program a GUI as the client, the numbers could still exist, and the user would simply click like on the message, which would correspond to the LTS associated with the message.  For chatroom attendees, we simplified the client side by displaying text built by the server.  We realize that this has the limitation of the text line length.  If we had a requirement for how many people could be in a chat room, we might create another data structure on the client, and have the server send a message for each user and the client can maintain a linked list. Therefore no matter how many updates are made to the attendee list due to partitions or servers going down, the client only needs to receive one message with the attendee list to display correctly for the user.  As messages arrive, they are placed at the end of the chatroom linked list, unless the mess type is 13, which means it came from a merge and it needs to be placed in correct LTS order.
 
 \subsection{Algorithm}
 
 \subsubsection{Regular Case}
 
-In the regular case, each server starts and has no log file.  As each server comes online, they share with the server group their matrix.  This is a matrix of lamport timestamps of the latest update from each server.  Therefore a server will have the latest timestamps from itself, along with the latest timestamps of messages it has received from other servers.  This is key, because if two servers join after a partition, one may know about messages that were sent from a third server, and thus can send the third servers messages to ensure the latest knowledge is shared within their partition.  \\
+In the regular case, each server starts and has no log file.  As each server comes online, they share with the server group their matrix utilizing a spread mess type of 10.  This is a matrix of lamport timestamps of the latest update from each server.  Therefore a server will have the latest timestamps from itself, along with the latest timestamps of messages it has received from other servers.  This is key, because if two servers join after a partition, one may know about messages that were sent from a third server, and thus can send the third servers messages to ensure the latest knowledge is shared within their partition.  Although we send the entire matrix, in our implementation we only utilize the vector from each server to send updates.  We sent the entire matrix in order to trim messages received by all servers, since we would no longer need to resend these messages.  This could be implemented by utilizing this matrix.\\
 Initially these timestamps are zero.  As clients join servers, they create messages, and the servers assign each message an LTS, saves it to its log, and sends that message to the chatroom on its server, and also sends the message to the other servers so they can update their respective chatrooms.  If a user "likes" a message, a chat message is created with the LTS of the message they like, and that is sent to the server.  The server then updates its data structure by finding the message, and either adding a likes struct to that message for that user, or finding one that exists and checks to see if the LTS is greater or not.  If it is greater it updates the LTS, and changes the like to one.  The same occurs for an unlike, however it just updates the value to 0.  Although the server maintains the linked list of names that like a message, when the server updates the clients, it simply updates that message with the number of users that like the message.  This makes it simple for the clients to display the number of likes without maintaining a user list for each message.\\
 When a server crashes and is restarted, it begins by reading from the log file.  As it reads, it updates its matrix of LTS timestamps.  When complete, it joins the server group, which triggers all servers to send their matrix.  It will immediately receive updates for all the message it does not have from the server that has the highest LTS of messages in the matrix for each server.  It will process these updates, and if any clients connect during this time, they will be given the updates as well by the group they are connected to for their chatroom.
 
 \subsubsection{Reconciliation Case}
 Each time a membership change operation occurs in the server group, each
-server begins a reconciliation process.  If a server leaves the group, each
-server begins removing all users from the chatroom data structure for that
-server.  Then an update is sent to the client of only those affected
+server begins a reconciliation process.  If a server leaves the group, each server begins removing all users from the chatroom data structure for that
+server.  Then an update is sent to the client to update the
 chatrooms with the new membership list of the rooms.  Therefore every user
 will know that the users that were on the server that went down are no
-longer reachable.  \\When a server joins the server group, this triggers
+longer in the chatroom.  \\When a server joins the server group, this triggers
 each server to send their matrix of latest LTS timestamps for each message
 they now about.  Since the membership change contains how many servers are
 in the group, each server will wait for the correct number of matrices from
 each other server before sending any updates. Furthermore, the receiving
 servers will filter through the received matrices. This is done by keeping
 an array of received matrices and marking ones already received for a given
-merge.  This is done because of potential duplicate matrices being sent
-after subsequent merges. If there are two merges in a row to a single
+merge.  This is done in order to ensure we get a vector from each server in the new group. If there are two merges in a row to a single
 group, then the servers in the original group will end up sending their
 matrices twice. They may receive each other's more than once and if we
 solely rely on the number of matrices received, then we may end up
 neglecting some servers that joined in the second merge.  Once they are all received, each server computes the minimum and maximum LTS for each server.  If the server finds that their server ID contains the maximum, it will send all messages after the minimum LTS (regardless if they are the owner of the messages).  Servers will disregard any message it receives if it has a lower LTS than what is received.  Therefore, each server will now have the latest messages after the join operation.  \\
 As each of these update message arrive at the server, they are placed in the server array/linked list structure in order, and in the chatroom linked list by LTS order.  In addition, each packet is also sent to the chatroom group on that server that it belongs to.  This allows each client to receive the message, and place it in its data structure in LTS order.  Once this occurs, it will refresh the screen to display that message and all after it, to inform the user of the changed messages and/or likes.\\
-In the case that a message is liked, but the message that was liked was not yet received by the server, the server will create a message that is marked as not received, and the like is attached to that message.  This placeholder message will not be displayed until it is marked received.  Once this occurs, the like will be on that message.  This creates eventual consistency, since likes refer to messages that potentially may not be received due to partitioning.
+In the case that a message is liked, but the message that was liked was not yet received by the server, the server will create a message that is marked as not received, and the like is attached to that message.  This placeholder message will not be displayed until it is marked received, however it is put in the correct place in the linked list based on the timestamp the like refers to.  When the referred to message is received, the data is copied into this placeholder message, it is marked as received, and the like will be on that message.  This creates eventual consistency, since likes refer to messages that potentially may not be received due to partitioning.
 \end{document}
